--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
       rel="stylesheet"
     />
-    <title>Pokedex</title>
+    <title>Pokédex</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
